--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/my_nav">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/my_nav"
+    app:startDestination="@id/splashFragment">
 
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.kanyideveloper.onboardingscreens.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash" >
+        <action
+            android:id="@+id/action_splashFragment_to_viewPagerAdapter"
+            app:destination="@id/viewPagerAdapter" />
+    </fragment>
+    <fragment
+        android:id="@+id/viewPagerAdapter"
+        android:name="com.kanyideveloper.onboardingscreens.onboarding.ViewPagerAdapter"
+        android:label="fragment_view_pager_adapter"
+        tools:layout="@layout/fragment_view_pager_adapter" />
 </navigation>
