--- a/app/src/main/res/layout/fragment_screen1.xml
+++ b/app/src/main/res/layout/fragment_screen1.xml
@@ -42,18 +42,19 @@
         android:layout_marginEnd="16dp"
         android:text="@string/template"
         android:textAlignment="center"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialTextView" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/next2"
+        android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="34dp"
         android:text="Next"
+        android:textStyle="bold"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="27sp"
         app:layout_constraintBottom_toBottomOf="parent"
