--- a/app/src/main/res/layout/fragment_screen2.xml
+++ b/app/src/main/res/layout/fragment_screen2.xml
@@ -42,7 +42,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/template"
         android:textAlignment="center"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialTextView" />
@@ -54,6 +54,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="34dp"
         android:text="Next"
+        android:textStyle="bold"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="27sp"
         app:layout_constraintBottom_toBottomOf="parent"
