--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -18,5 +18,14 @@
         android:id="@+id/viewPagerAdapter"
         android:name="com.kanyideveloper.onboardingscreens.onboarding.ViewPagerFragment"
         android:label="fragment_view_pager_adapter"
-        tools:layout="@layout/fragment_view_pager_adapter" />
+        tools:layout="@layout/fragment_view_pager_adapter" >
+        <action
+            android:id="@+id/action_viewPagerAdapter_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.kanyideveloper.onboardingscreens.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
